--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import Welcome from "../components/Welcome.svelte";
     <main>
       <Header />
       <Hero />
-      <Welcome />
+      <Welcome client:only/>
     </main>
   </body>
 </html>
